# Tools_CXX_Linux

./: CMakeLists.txt  README.md
algorithm_extension/: CMakeLists.txt  main_algorithm.cpp
algorithm_extension/src/: lcs.h  union.hpp
cv_extension/: CMakeLists.txt  main_cv.cpp
cv_extension/src/: cvRect_ex.cpp  cvRect_ex.h  cvRotatedRect.cpp  cvRotatedRect.h  cvRotatedRect_ex.h  image_process.cpp  image_process.h
data_extension/: CMakeLists.txt  main_data.cpp
data_extension/src/: basic_data_type_op.h  basic_data_type_op.impl.hpp
design_pattern/: CMakeLists.txt  main_consumer.cpp
io_extension/: CMakeLists.txt  main_io.cpp
io_extension/src/: os_path.hpp  utf8_string.hpp
tools/: CMakeLists.txt  Markup.cpp  detectionWrapper.cpp  detectionWrapper.h  main_gen_xmlvoc.cpp  main_json.cpp  temp_functions.cpp
